--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Sheldor的博客
-SEOTitle: Sheldor的博客 | BY Blog
+SEOTitle: Sheldor的博客 | Sheldor Blog
 header-img: img/post-bg-desk.jpg
 email: sheldor_qu@163.com
 description: "Every failure is leading towards success."
