--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Sheldor的博客
-SEOTitle: Sheldor的博客 | Sheldor Blog
+title: Sheldor Blog
+SEOTitle: Sheldor Blog
 header-img: img/post-bg-desk.jpg
 email: sheldor_qu@163.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, Sheldormhh的博客, sheldormhh, 渠淼, qumiao, iOS, Apple, iPhone"
+keyword: "Sheldor的博客, sheldor, 渠淼, qumiao"
 url: "http://sheldormhh.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/sheldormhh/sheldormhh.github.io.git" # you code repository
