--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ sidebar-avatar: /img/about-Sheldor-gentle.jpg      # use absolute URL, seeing it
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
+weibo_username:     sheldormhh
 zhihu_username:     xie-er-duo-52-58
 github_username:    sheldormhh
-facebook_username:  #baiying.qiu.7
-jianshu_username:   #e71990ada2fd
-#twitter_username:   qiubaiying
+#facebook_username:  #baiying.qiu.7
+jianshu_username:   af10995b45bf
+twitter_username:   sheldormhh
 
 
 
