--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Sheldor Blog
+title: Sheldor Blog1
 SEOTitle: Sheldor Blog
 header-img: img/post-bg-desk.jpg
 email: sheldor_qu@163.com
