--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ RSS: false
 weibo_username:     sheldormhh
 zhihu_username:     xie-er-duo-52-58
 github_username:    sheldormhh
-#facebook_username:  #baiying.qiu.7
+facebook_username:  sheldor.qu
 jianshu_username:   af10995b45bf
 twitter_username:   sheldormhh
 
